# hexlet-my-first-workflow

./: README.md  pyproject.toml
.github/workflows/: makefile.yml
