[tool.poetry]
name = "hexlet-my-first-workflow"
version = "0.1.0"
description = ""
authors = ["<Vladimir Popchenko> <<pwd70@mail.ru>>"]
readme = "README.md"
packages = [{include = "hexlet_my_first_workflow"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
